--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.91.7",
+    "borsh": "^2.0.0",
     "bs58": "^5.0.0",
+    "ethereumjs-utils": "^5.2.5",
     "jose": "^5.2.4",
     "next": "14.1.4",
     "notistack": "^3.0.1",
