--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
-    "@noble/curves": "^1.4.0",
     "@prisma/client": "^5.12.1",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-material-ui": "^0.16.34",
@@ -26,13 +25,12 @@
     "borsh": "^2.0.0",
     "bs58": "^5.0.0",
     "ethereumjs-utils": "^5.2.5",
-    "jose": "^5.2.4",
+    "jose": "^5.3.0",
     "next": "14.1.4",
     "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.5",
-    "zustand": "^4.5.2"
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
