--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
